--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header-container">
         <div class="header">
             <div class="checkbox-container">
-                <div class="checkbox" id="toggle">
+
                     <div class="checkbox-wrapper">
                         <input type="checkbox" id="toggle">
                         <label class="checkbox" for="toggle">
@@ -24,7 +24,7 @@
                             <div class="trace"></div>
                         </label>
                         <div class="menu"></div>
-                        <nav class="menu-item">
+                        <nav class="menu-itens">
                             <ul>
                                 <li>
                                     <a href="#">Projetos</a>
@@ -38,12 +38,10 @@
                             </ul>
                         </nav>
                     </div>
-
-                </div>
             </div>
         </div>
         <h1>Franco Mello</h1>
-        <h2>Front-end Developer</h2>
+        <h2>Dev.Front-end</h2>
         <div class="social-media">
             <a href="#">Linkedin</a>
             <a href="#">Github</a>
@@ -51,7 +49,31 @@
         <div></div>
     </header>
     <main class="container">
-
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 1</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem Ipsum é simplesmente uma simulação
+                de texto da indústria tipográfica e de 
+                impressos, e vem sendo utilizado 
+                desde o século XVI, quando um impressor 
+                desconhecido pegou uma bandeja de tipos 
+                e os embaralhou para fazer um livro de 
+                modelos de tipos. Lorem Ipsum sobreviveu 
+                não só a cinco séculos, como também ao 
+                salto para a editoração eletrônica, 
+                permanecendo essencialmente inalterado. 
+                Se popularizou na década de 60, quando a 
+                Letraset lançou decalques contendo passagens 
+                de Lorem Ipsum, e mais recentemente quando 
+                passou a ser integrado a softwares 
+                de editoração eletrônica como Aldus PageMaker.
+            </div>
+        </div>
     </main>
     <footer class="footer">
 
